<resources>
    <string name="app_name">MyGymBro</string>
    <string name="nickname">Nick name</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step5">Step 5/5</string>
    <string name="schedule">Tell us your schedule.</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="Th">T</string>
    <string name="F">F</string>
    <string name="Sa">S</string>
    <string name="Sun">S</string>
    <string name="ses_time">Session time(min)</string>
    <string name="fin_schedule">To finish with your personalized program we need your schedule.</string>
    <string name="back">BACK</string>
    <string name="finish">FINISH</string>
    <string name="mygymbro">MyGymBro</string>
    <string name="snackStepOne">Please, write all your data</string>
    <string name="snackStepTwo">Please, mark your gender</string>
    <string name="snackStepFive">Please, finish your schedule</string>
    <string name="snackStepFiveDuration">The duration must be less than 3 hours</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender_explication">To give you a customize experience \n we need to know your gender</string>
    <string name="application_logo">Application\'s logo</string>
    <string name="welcome_to_mygymbro">Welcome to \n MyGymBro</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register_button">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snackDifferentPassword">The passwords doesn\'t match</string>
    <string name="snackEmptyFields">Some fields remain empty</string>
    <string name="snackSelectOption">Select an option</string>
    <string name="confirmRegister">Registration confirmation</string>
    <string name="confirmRegisterMessage">"Please verify your email by clicking on the link we sent you."</string>
    <string name="confirmRegisterMessage2">"If you did not receive the email," +
                "please check your spam folder or click the button to resend the verification email."</string>
    <string name="confirmRegisterButton">Go to Login</string>
    <string name="resendEmail">Resend Email</string>
</resources>